RET-5972 - Refactor and Updates (#1362)