@@ -74,10 +74,10 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
 import static uk.gov.hmcts.et.common.model.ccd.types.citizenhub.ClaimantTse.CY_ABBREVIATED_MONTHS_MAP;
+import static uk.gov.hmcts.reform.et.syaapi.constants.EtSyaConstants.SEND_EMAIL_PARAMS_HEARING_DATE_KEY;
 import static uk.gov.hmcts.reform.et.syaapi.constants.EtSyaConstants.UNASSIGNED_OFFICE;
 import static uk.gov.hmcts.reform.et.syaapi.constants.EtSyaConstants.YES;
 import static uk.gov.hmcts.reform.et.syaapi.helper.NotificationsHelper.MY_HMCTS;
-import static uk.gov.hmcts.reform.et.syaapi.service.NotificationService.HEARING_DATE_KEY;
 import static uk.gov.hmcts.reform.et.syaapi.service.utils.TestConstants.ENGLISH_LANGUAGE;
 import static uk.gov.hmcts.reform.et.syaapi.service.utils.TestConstants.NOTIFICATION_CONFIRMATION_ID;
 import static uk.gov.hmcts.reform.et.syaapi.service.utils.TestConstants.TEST_SUBMIT_CASE_PDF_FILE_RESPONSE;
@@ -576,7 +576,8 @@ class NotificationServiceTest {
             notificationService.sendAcknowledgementEmailToClaimant(details, caseTestData.getClaimantApplication());
 
             Map<String, Object> capturedClaimantParameters = claimantParametersCaptor.getValue();
-            String translatedHearingDate = capturedClaimantParameters.get(HEARING_DATE_KEY).toString();
+            String translatedHearingDate =
+                capturedClaimantParameters.get(SEND_EMAIL_PARAMS_HEARING_DATE_KEY).toString();
             assertThat(translatedHearingDate).isEqualTo(DATE_DAY + " " + welshMonth + " " + DATE_YEAR);
         }
 
@@ -628,7 +629,7 @@ class NotificationServiceTest {
             );
 
             Map<String, Object> capturedClaimantParameters = claimantParametersCaptor.getValue();
-            String actualHearingDate = capturedClaimantParameters.get(HEARING_DATE_KEY).toString();
+            String actualHearingDate = capturedClaimantParameters.get(SEND_EMAIL_PARAMS_HEARING_DATE_KEY).toString();
             assertThat(actualHearingDate).isEqualTo(expectedOutcome);
         }
     }
@@ -1037,6 +1038,7 @@ class NotificationServiceTest {
             respondent.setValue(RespondentSumType.builder()
                                     .respondentEmail("email")
                                     .respondentName("RespondentName")
+                                    .idamId("1f3a9b7c-8d4e-4f21-9abc-1234567890ab")
                                     .build());
             caseData.setRespondentCollection(List.of(respondent));
         }
@@ -1100,7 +1102,7 @@ class NotificationServiceTest {
 
             verify(notificationClient, times(1)).sendEmail(
                 any(),
-                eq(caseTestData.getCaseData().getRespondentCollection().get(0).getValue().getRespondentEmail()),
+                eq(caseTestData.getCaseData().getRespondentCollection().getFirst().getValue().getRespondentEmail()),
                 any(),
                 eq(caseTestData.getExpectedDetails().getId().toString())
             );
@@ -1116,7 +1118,7 @@ class NotificationServiceTest {
 
             verify(notificationClient, times(0)).sendEmail(
                 any(),
-                eq(caseTestData.getCaseData().getRespondentCollection().get(0).getValue().getRespondentEmail()),
+                eq(caseTestData.getCaseData().getRespondentCollection().getFirst().getValue().getRespondentEmail()),
                 any(),
                 eq(caseTestData.getExpectedDetails().getId().toString())
             );
@@ -1125,14 +1127,25 @@ class NotificationServiceTest {
         @Test
         void shouldSendResponseEmailToRespondentResp() throws NotificationClientException {
             RespondentSumTypeItem respondentSumTypeItem = new RespondentSumTypeItem();
-            respondentSumTypeItem.setValue(RespondentSumType.builder()
-                                               .respondentEmail("test@resRep.com")
-                                               .respondentName("RespondentName")
-                                               .build());
             respondentSumTypeItem.setId(String.valueOf(UUID.randomUUID()));
+            respondentSumTypeItem.setValue(RespondentSumType.builder()
+                                               .respondentEmail("test1@respondent.com")
+                                               .responseRespondentEmail("test2@respondent.com")
+                                               .respondentName("RespondentName2")
+                                               .build());
+
+            RepresentedTypeRItem representedTypeRItem = RepresentedTypeRItem.builder()
+                .id(String.valueOf(UUID.randomUUID()))
+                .value(RepresentedTypeR.builder()
+                           .myHmctsYesNo(YES)
+                           .respRepName("RespondentName2")
+                           .representativeEmailAddress("test@resRep.com")
+                           .build())
+                .build();
 
             caseData = caseTestData.getCaseData();
-            caseData.getRespondentCollection().add(respondentSumTypeItem);
+            caseData.setRespondentCollection(List.of(respondentSumTypeItem));
+            caseData.setRepCollection(List.of(representedTypeRItem));
 
             notificationService.sendResponseEmailToRespondent(
                 details,
@@ -1226,7 +1239,7 @@ class NotificationServiceTest {
 
         verify(notificationClient, times(1)).sendEmail(
             any(),
-            eq(caseTestData.getCaseData().getRespondentCollection().get(0).getValue().getRespondentEmail()),
+            eq(caseTestData.getCaseData().getRespondentCollection().getFirst().getValue().getRespondentEmail()),
             any(),
             eq(caseTestData.getExpectedDetails().getId().toString())
         );
@@ -1375,8 +1388,8 @@ class NotificationServiceTest {
 
         caseData = caseTestData.getCaseData();
         String futureDate = LocalDateTime.now().plusDays(5).toString();
-        caseData.getHearingCollection().get(0).getValue().getHearingDateCollection().get(0).getValue().setListedDate(
-            futureDate);
+        caseData.getHearingCollection().getFirst().getValue()
+            .getHearingDateCollection().getFirst().getValue().setListedDate(futureDate);
 
         notificationService.sendBundlesEmails(
             caseData,
@@ -1566,7 +1579,8 @@ class NotificationServiceTest {
 
             List<Map<String, Object>> capturedParameters = respondentParametersCaptor.getAllValues();
             for (Map<String, Object> params : capturedParameters) {
-                assertEquals(DATE_DAY + " " + welshMonth + " " + DATE_YEAR, params.get(HEARING_DATE_KEY));
+                assertEquals(DATE_DAY + " " + welshMonth + " " + DATE_YEAR,
+                             params.get(SEND_EMAIL_PARAMS_HEARING_DATE_KEY));
             }
         }
 
